Feat/(implemented pagination in backend methods for items)